Bug 1685816 - Don't fire rel=preload error events for invalid type/media/as attributes. r=smaug

This matches other browsers, https://github.com/w3c/preload/issues/155
is the spec issue. There was a test for invalid as values.

Differential Revision: https://phabricator.services.mozilla.com/D101243