dom/html/HTMLLinkElement.cpp
@@ -587,8 +587,7 @@ void HTMLLinkElement::
   }
 
   if (linkTypes & ePRELOAD) {
-    nsCOMPtr<nsIURI> uri(GetURI());
-    if (uri) {
+    if (nsCOMPtr<nsIURI> uri = GetURI()) {
       nsContentPolicyType policyType;
 
       nsAttrValue asAttr;
@@ -596,13 +595,11 @@ void HTMLLinkElement::
       nsAutoString media;
       GetContentPolicyMimeTypeMedia(asAttr, policyType, mimeType, media);
 
-      if (policyType == nsIContentPolicy::TYPE_INVALID) {
+      if (policyType == nsIContentPolicy::TYPE_INVALID ||
+          !CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
         // Ignore preload with a wrong or empty as attribute.
+        WarnIgnoredPreload(*OwnerDoc(), *uri);
         return;
-      }
-
-      if (!CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
-        policyType = nsIContentPolicy::TYPE_INVALID;
       }
 
       StartPreload(policyType);
@@ -659,16 +656,13 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
   nsAutoString media;
   GetContentPolicyMimeTypeMedia(asAttr, asPolicyType, mimeType, media);
 
-  if (asPolicyType == nsIContentPolicy::TYPE_INVALID) {
+  if (asPolicyType == nsIContentPolicy::TYPE_INVALID ||
+      !CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
     // Ignore preload with a wrong or empty as attribute, but be sure to cancel
     // the old one.
     CancelPrefetchOrPreload();
+    WarnIgnoredPreload(*OwnerDoc(), *uri);
     return;
-  }
-
-  nsContentPolicyType policyType = asPolicyType;
-  if (!CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
-    policyType = nsIContentPolicy::TYPE_INVALID;
   }
 
   if (aName == nsGkAtoms::crossorigin) {
@@ -676,7 +670,7 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
     CORSMode oldCorsMode = AttrValueToCORSMode(aOldValue);
     if (corsMode != oldCorsMode) {
       CancelPrefetchOrPreload();
-      StartPreload(policyType);
+      StartPreload(asPolicyType);
     }
     return;
   }
@@ -718,17 +712,14 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
     }
   }
 
-  if ((policyType != oldPolicyType) &&
-      (oldPolicyType != nsIContentPolicy::TYPE_INVALID)) {
+  if (asPolicyType != oldPolicyType &&
+      oldPolicyType != nsIContentPolicy::TYPE_INVALID) {
     CancelPrefetchOrPreload();
   }
 
   // Trigger a new preload if the policy type has changed.
-  // Also trigger load if the new policy type is invalid, this will only
-  // trigger an error event.
-  if ((policyType != oldPolicyType) ||
-      (policyType == nsIContentPolicy::TYPE_INVALID)) {
-    StartPreload(policyType);
+  if (asPolicyType != oldPolicyType) {
+    StartPreload(asPolicyType);
   }
 }
 
@@ -743,12 +734,12 @@ void HTMLLinkElement::CancelPrefetchOrPreload() {
   }
 }
 
-void HTMLLinkElement::StartPreload(nsContentPolicyType policyType) {
+void HTMLLinkElement::StartPreload(nsContentPolicyType aPolicyType) {
   MOZ_ASSERT(!mPreload, "Forgot to cancel the running preload");
 
   auto referrerInfo = MakeRefPtr<ReferrerInfo>(*this);
-  RefPtr<PreloaderBase> preload =
-      OwnerDoc()->Preloads().PreloadLinkElement(this, policyType, referrerInfo);
+  RefPtr<PreloaderBase> preload = OwnerDoc()->Preloads().PreloadLinkElement(
+      this, aPolicyType, referrerInfo);
   mPreload = preload.get();
 }
 
@@ -804,12 +795,12 @@ bool HTMLLinkElement::CheckPreloadAttrs(const nsAttrValue& aAs,
     return true;
   }
 
-  nsString type = nsString(aType);
-  ToLowerCase(type);
-
   if (policyType == nsIContentPolicy::TYPE_INTERNAL_FETCH_PRELOAD) {
     return true;
   }
+
+  nsAutoString type(aType);
+  ToLowerCase(type);
   if (policyType == nsIContentPolicy::TYPE_MEDIA) {
     if (aAs.GetEnumValue() == DESTINATION_TRACK) {
       return type.EqualsASCII("text/vtt");
@@ -839,6 +830,17 @@ bool HTMLLinkElement::CheckPreloadAttrs(const nsAttrValue& aAs,
     return type.EqualsASCII("text/css");
   }
   return false;
+}
+
+void HTMLLinkElement::WarnIgnoredPreload(const Document& aDoc, nsIURI& aURI) {
+  AutoTArray<nsString, 1> params;
+  {
+    nsCString uri = nsContentUtils::TruncatedURLForDisplay(&aURI);
+    AppendUTF8toUTF16(uri, *params.AppendElement());
+  }
+  nsContentUtils::ReportToConsole(nsIScriptError::warningFlag, "DOM"_ns, &aDoc,
+                                  nsContentUtils::eDOM_PROPERTIES,
+                                  "PreloadIgnoredInvalidAttr", params);
 }
 
 bool HTMLLinkElement::IsCSSMimeTypeAttributeForLinkElement(
